--- a/configs/uavx_37i00_defconfig
+++ b/configs/uavx_37i00_defconfig
@@ -9,7 +9,7 @@ BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/35i00/rootfs"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/37i00/rootfs"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/freescale/common/imx/post-image.sh"
 
 BR2_TARGET_ROOTFS_EXT2=y
@@ -25,16 +25,16 @@ BR2_TARGET_GENERIC_GETTY_PORT="ttymxc0"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://git.freescale.com/imx/linux-imx.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="rel_imx_4.1.15_2.0.0_ga"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="scm-imx_4.1.15_2.0.0_ga"
 BR2_LINUX_KERNEL_DEFCONFIG="imx_v7"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_USE_CUSTOM_DTS=y
-BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/35i00/imx6q_uavx_35i00.dts"
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/37i00/imx6q_uavx_37i00.dts"
 
 
 # bootloader
 BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BOARDNAME="mx6q_uavx_35i00"
+BR2_TARGET_UBOOT_BOARDNAME="mx6q_uavx_37i00"
 BR2_TARGET_UBOOT_FORMAT_IMX=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/WiSystem/uboot_imx_2016_03.git"
