--- a/configs/uavx_37i00_defconfig
+++ b/configs/uavx_37i00_defconfig
@@ -10,6 +10,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/37i00/rootfs"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/uavx/37i00/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/freescale/common/imx/post-image.sh"
 
 BR2_TARGET_ROOTFS_EXT2=y
