--- a/board/uavx/37i00/imx6q_uavx_37i00.dts
+++ b/board/uavx/37i00/imx6q_uavx_37i00.dts
@@ -1,37 +1,33 @@
 /*
- * Copyright 2017 UAVX.
- * Copyright 2012 Freescale Semiconductor, Inc.
- * Copyright 2011 Linaro Ltd.
+ * Copyright (C) 2016 Freescale Semiconductor, Inc.
  *
- * The code contained herein is licensed under the GNU General Public
- * License. You may obtain a copy of the GNU General Public License
- * Version 2 or later at the following locations:
- *
- * http://www.opensource.org/licenses/gpl-license.html
- * http://www.gnu.org/copyleft/gpl.html
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2 as
+ * published by the Free Software Foundation.
  */
 
+ 
 /dts-v1/;
 
+#include "imx6q.dtsi"
+ 
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
-
-#include "imx6q.dtsi"
 
 / {
 
 	model = "UAVX i.MX6 Quad Board 37i00";
-	compatible = "fsl,imx6q-uavx", "fsl,imx6q";
-/*
+	compatible = "fsl,imx6q";
+	
+	memory: memory {
+			reg = <0x10000000 0x40000000>;
+		};
+		
 	memory: memory {
 		linux,usable-memory = <0x10000000 0x20000000
 				       0x80000000 0x20000000>;
 	};
-*/
-	memory: memory {
-		linux,usable-memory = <0x10000000 0x20000000>;
-	};
-
+	
 	aliases {
 		mxcfb0 = &mxcfb1;
 		mxcfb1 = &mxcfb2;
@@ -41,24 +37,17 @@
 
 	soc {
 		busfreq {
-				fsl,max_ddr_freq = <400000000>;
-				status = "okay";
-			};
+			fsl,max_ddr_freq = <400000000>;
+			status = "okay";
 		};
+	};
 
 	chosen {
 		stdout-path = &uart1;
 	};
-/*
-	memory: memory {
-			reg = <0x10000000 0x40000000>;
-		};
-*/
-	memory: memory {
-			reg = <0x10000000 0x20000000>;
-		};
 
 	regulators {
+	
 		compatible = "simple-bus";
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -72,54 +61,92 @@
 			gpio = <&gpio3 22 0>;
 			enable-active-high;
 		};
+		
+        reg_3p3v: regulator@1 {
+            compatible = "regulator-fixed";
+            reg = <0>;
+            regulator-name = "3P3V";
+            regulator-min-microvolt = <3300000>;
+            regulator-max-microvolt = <3300000>;
+            regulator-always-on;
+        };
 	};
-
+	
+/*
+	sound-hdmi {
+		compatible = "fsl,imx6q-audio-hdmi",
+				 "fsl,imx-audio-hdmi";
+		model = "imx-audio-hdmi";
+		hdmi-controller = <&hdmi_audio>;
+	};
+*/
 	mxcfb1: fb@0 {
 		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "ldb";
+		interface_pix_fmt = "RGB666";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
 		status = "disabled";
 	};
 
 	mxcfb2: fb@1 {
 		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "hdmi";
+		interface_pix_fmt = "RGB24";
+		mode_str ="1920x1080M@60";
+		default_bpp = <24>;
+		int_clk = <0>;
+		late_init = <0>;
 		status = "disabled";
 	};
 
 	mxcfb3: fb@2 {
 		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "lcd";
+		interface_pix_fmt = "RGB565";
+		mode_str ="CLAA-WVGA";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
 		status = "disabled";
 	};
 
 	mxcfb4: fb@3 {
 		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "ldb";
+		interface_pix_fmt = "RGB666";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
+		status = "disabled";
+	};
+	
+	backlight {
+		compatible = "pwm-backlight";
+		pwms = <&pwm4 0 5000000>;
+		brightness-levels = <0 4 8 16 32 64 128 255>;
+		default-brightness-level = <7>;
 		status = "disabled";
 	};
 
 	v4l2_out {
 		compatible = "fsl,mxc_v4l2_output";
-		status = "okay";
+		status = "disabled";
 	};
-
-	leds {
-		compatible = "gpio-leds";
-
-		cpu-user-led {
-			gpios = <&gpio2 22 0>;
-			linux,default-trigger = "heartbeat";
-			retain-state-suspended;
-		};
-
-		sd-activity-led {
-			gpios = <&gpio2 21 0>;
-			linux,default-trigger = "mmc1";  /*SD activity LED*/
-		};
-
-	};
-
+	
 	gpio-keys {
 		compatible = "gpio-keys";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_gpio_keys>;
 
+		power {
+			label = "Power Button";
+			gpios = <&gpio5 2 GPIO_ACTIVE_LOW>;
+			gpio-key,wakeup;
+			linux,code = <KEY_POWER>;
+		};
+		
 		volume_down {
 			label = "volume down";
 			gpios = <&gpio3 19 GPIO_ACTIVE_LOW>;
@@ -133,10 +160,25 @@
 			gpio-key,wakeup;
 			linux,code = <KEY_VOLUMEUP>;
 		};
-
-
+		
 	};
+		
+    leds {
+		compatible = "gpio-leds";
 
+		cpu-user-led {
+			gpios = <&gpio2 22 0>;
+			linux,default-trigger = "heartbeat";
+			retain-state-suspended;
+		};
+
+		sd-activity-led {
+			gpios = <&gpio2 21 0>;
+			linux,default-trigger = "mmc1";  /*SD activity LED*/
+		};
+
+    };
+    
 	sound {
 		compatible = "fsl,imx6-rex-sgtl5000",
 			     "fsl,imx-audio-sgtl5000";
@@ -149,30 +191,20 @@
 			"Headphone Jack", "HP_OUT";
 		mux-int-port = <1>;
 		mux-ext-port = <3>;
-	};
-
-	regulators {
-		compatible = "simple-bus";
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		reg_3p3v: regulator@0 {
-			compatible = "regulator-fixed";
-			reg = <0>;
-			regulator-name = "3P3V";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			regulator-always-on;
-		};
-
-
-	};
-
+    };
+	
 };
 
+/*
 &cpu0 {
 	arm-supply = <&sw1a_reg>;
 	soc-supply = <&sw1c_reg>;
+};
+*/
+
+&cpu0 {
+	arm-supply = <&reg_arm>;
+	soc-supply = <&reg_soc>;
 };
 
 &clks {
@@ -207,7 +239,13 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
-
+/*
+	hdmi: edid@50 {
+		compatible = "fsl,imx6-hdmi-i2c";
+		reg = <0x50>;
+	};
+*/
+	
 	pmic: pfuze100@08 {
 		compatible = "fsl,pfuze100";
 		reg = <0x08>;
@@ -301,7 +339,7 @@
 
 			vgen5_reg: vgen5 {
 				regulator-min-microvolt = <1800000>;
-				regulator-max-microvolt = <3300000>;
+				regulator-max-microvolt = <2500000>;
 				regulator-always-on;
 			};
 
@@ -312,10 +350,11 @@
 			};
 		};
 	};
-
+	
 };
 
 &i2c3 {
+
 	clock-frequency = <100000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3>;
@@ -328,171 +367,103 @@
 		VDDA-supply = <&reg_3p3v>;
 		VDDIO-supply = <&reg_3p3v>;
 	};
-
-};
-
-&iomuxc {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_hog>;
-
-	imx6qdl-sabresd {
-
-		pinctrl_hog: hoggrp {
-			fsl,pins = <
-				MX6QDL_PAD_EIM_A16__GPIO2_IO22  	0x17059	/* LED1 */
-				MX6QDL_PAD_EIM_A17__GPIO2_IO21 		0x17059	/* LED2 */
-
-				MX6QDL_PAD_NANDF_WP_B__GPIO6_IO09 	0x17059	/* LASER */
-				MX6QDL_PAD_CSI0_PIXCLK__GPIO5_IO18 	0x17059	/* SELEN */
-
-				/* SGTL5000 sys_mclk */
-				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x030b0
-			>;
-		};
-
-		pinctrl_gpio_keys: gpio_keysgrp {
-			fsl,pins = <
-				MX6QDL_PAD_EIM_D19__GPIO3_IO19 	0x1b0b0
-				MX6QDL_PAD_EIM_D20__GPIO3_IO20 	0x1b0b0
-			>;
-		};
-
-		pinctrl_ecspi1: ecspi1grp {
-			fsl,pins = <
-				MX6QDL_PAD_EIM_D17__ECSPI1_MISO 0x100b1
-				MX6QDL_PAD_EIM_D18__ECSPI1_MOSI 0x100b1
-				MX6QDL_PAD_EIM_D16__ECSPI1_SCLK 0x100b1
-			>;
-		};
-
-		pinctrl_i2c1: i2c1grp {
-			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA	0x4001b8b1
-				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL	0x4001b8b1
-			>;
-		};
-
-		pinctrl_i2c2: i2c2grp {
-			fsl,pins = <
-				MX6QDL_PAD_KEY_COL3__I2C2_SCL	0x4001b8b1
-				MX6QDL_PAD_KEY_ROW3__I2C2_SDA	0x4001b8b1
-			 >;
-		};
-
-		pinctrl_i2c3: i2c3grp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_3__I2C3_SCL	0x4001b8b1
-				MX6QDL_PAD_GPIO_6__I2C3_SDA	0x4001b8b1
-			>;
-		};
-
-		pinctrl_pwm1: pwm1grp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_9__PWM1_OUT	0x1b0b1
-			 >;
-		};
-
-		pinctrl_pwm3: pwm3grp {
-			fsl,pins = <
-				MX6QDL_PAD_SD1_DAT1__PWM3_OUT	0x1b0b1
-			 >;
-		};
-
-		pinctrl_uart1: uart1grp {
-			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT12__UART4_TX_DATA 	0x1b0b1
-				MX6QDL_PAD_CSI0_DAT12__UART4_RX_DATA  	0x1b0b1
-			>;
-		};
-
-		pinctrl_uart4: uart4grp {
-			fsl,pins = <
-				MX6QDL_PAD_KEY_COL0__UART4_TX_DATA	0x1b0b1		
-				MX6QDL_PAD_KEY_COL0__UART4_RX_DATA	0x1b0b1		
-			>;
-		};
-
-		pinctrl_usbotg: usbotggrp {
-			fsl,pins = <
-				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x17059
-			>;
-		};
-
-		pinctrl_usdhc2: usdhc2grp {
-			fsl,pins = <			
-				MX6QDL_PAD_SD2_CMD__SD2_CMD		0x17059		/* OK */
-				MX6QDL_PAD_SD2_CLK__SD2_CLK		0x10059		/* OK */
-				MX6QDL_PAD_SD2_DAT0__SD2_DATA0		0x17059		/* OK */
-				MX6QDL_PAD_SD2_DAT1__SD2_DATA1		0x17059		/* OK */
-				MX6QDL_PAD_SD2_DAT2__SD2_DATA2		0x17059		/* OK */
-				MX6QDL_PAD_SD2_DAT3__SD2_DATA3		0x17059		/* OK */
-				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x80000000 	/* OK CD */
-				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x80000000 	/* OK WP */
-			>;
-		};
-
-		pinctrl_usdhc3: usdhc3grp {
-			fsl,pins = <
-				MX6QDL_PAD_SD3_CMD__SD3_CMD		0x17059
-				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x10059
-				MX6QDL_PAD_SD3_DAT0__SD3_DATA0		0x17059
-				MX6QDL_PAD_SD3_DAT1__SD3_DATA1		0x17059
-				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x17059
-				MX6QDL_PAD_SD3_DAT3__SD3_DATA3		0x17059
-				MX6QDL_PAD_SD3_DAT4__SD3_DATA4		0x17059
-				MX6QDL_PAD_SD3_DAT5__SD3_DATA5		0x17059
-				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17059
-				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17059
-			>;
-		};
-
-		pinctrl_wdog: wdoggrp {
-			fsl,pins = <
-				MX6QDL_PAD_SD1_DAT3__WDOG2_B 		0x80000000
-			>;
-		};
-
-	};
+	
 };
 
 &dcic1 {
 	dcic_id = <0>;
 	dcic_mux = "dcic-hdmi";
-	status = "disabled";
+	status = "disable";
 };
 
 &dcic2 {
 	dcic_id = <1>;
 	dcic_mux = "dcic-lvds1";
-	status = "disabled";
+	status = "disable";
 };
 
 &gpc {
-	fsl,ldo-bypass = <1>;
+	/* use ldo-enable, u-boot will check it and configure */
+	fsl,ldo-bypass = <0>;
+	/* watchdog select of reset source */
+	fsl,wdog-reset = <1>;
 };
 
 &hdmi_audio {
-	status = "disabled";
+	status = "disable";
 };
 
 &hdmi_cec {
-	status = "disabled";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hdmi_cec>;
+	status = "disable";
 };
 
 &hdmi_core {
 	ipu_id = <0>;
 	disp_id = <0>;
-	status = "disabled";
+	status = "disable";
 };
 
 &hdmi_video {
 	fsl,phy_reg_vlev = <0x0294>;
 	fsl,phy_reg_cksymtx = <0x800d>;
-	status = "disabled";
+	status = "disable";
 };
 
 &ldb {
-	status = "disabled";
+	status = "disable";
+
+	lvds-channel@0 {
+		fsl,data-mapping = "spwg";
+		fsl,data-width = <18>;
+		status = "disable";
+
+		crtc = "ipu2-di0";
+		
+		display-timings {
+			native-mode = <&timing0>;
+			timing0: hsd100pxn1 {
+				clock-frequency = <65000000>;
+				hactive = <1024>;
+				vactive = <768>;
+				hback-porch = <220>;
+				hfront-porch = <40>;
+				vback-porch = <21>;
+				vfront-porch = <7>;
+				hsync-len = <60>;
+				vsync-len = <10>;
+			};
+		};
+	};
+
+	lvds-channel@1 {
+		fsl,data-mapping = "spwg";
+		fsl,data-width = <18>;
+		primary;
+		status = "disable";
+
+		crtc = "ipu2-di1";
+		
+		display-timings {
+			native-mode = <&timing1>;
+			timing1: hsd100pxn1 {
+				clock-frequency = <65000000>;
+				hactive = <1024>;
+				vactive = <768>;
+				hback-porch = <220>;
+				hfront-porch = <40>;
+				vback-porch = <21>;
+				vfront-porch = <7>;
+				hsync-len = <60>;
+				vsync-len = <10>;
+			};
+		};
+	};
+};
+
+&snvs_poweroff {
+	status = "okay";
 };
 
 &pwm1 {
@@ -507,10 +478,6 @@
 	status = "okay";
 };
 
-&snvs_poweroff {
-	status = "okay";
-};
-
 &uart1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
@@ -521,10 +488,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
 	status = "okay";
-};
-
-&usbh1 {
-	status = "disabled";
 };
 
 &usbotg {
@@ -551,7 +514,8 @@
 	pinctrl-0 = <&pinctrl_usdhc2>;
 	bus-width = <4>;
 	cd-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
-/*	wp-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
+/*
+	wp-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
 */
 	no-1-8-v;
 	keep-power-in-suspend;
@@ -578,3 +542,152 @@
 	fsl,wdog_b;
 	status = "okay";
 };
+
+
+&iomuxc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hog>;
+
+	imx6qdl-sabresd {
+		pinctrl_hog: hoggrp {
+			fsl,pins = <
+/*
+				MX6QDL_PAD_NANDF_D0__GPIO2_IO00 0x80000000
+				MX6QDL_PAD_NANDF_CS1__GPIO6_IO14 0x80000000
+				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15 0x80000000
+				MX6QDL_PAD_KEY_COL2__GPIO4_IO10 0x80000000
+				MX6QDL_PAD_EIM_EB2__GPIO2_IO30 0x80000000
+				MX6QDL_PAD_EIM_D22__GPIO3_IO22  0x80000000
+*/		
+				
+				MX6QDL_PAD_EIM_A16__GPIO2_IO22  	0x17059	/* LED1 */
+				MX6QDL_PAD_EIM_A17__GPIO2_IO21 		0x17059	/* LED2 */
+
+				MX6QDL_PAD_NANDF_WP_B__GPIO6_IO09 	0x17059	/* LASER */
+				MX6QDL_PAD_CSI0_PIXCLK__GPIO5_IO18 	0x17059	/* SELEN */
+
+				/* SGTL5000 sys_mclk */
+				MX6QDL_PAD_GPIO_0__CCM_CLKO1		0x030b0
+				
+			>;
+		};
+		
+		pinctrl_gpio_keys: gpio_keysgrp {
+			fsl,pins = <
+/*		
+				MX6QDL_PAD_EIM_A25__GPIO5_IO02 0x1b0b0
+*/
+				MX6QDL_PAD_EIM_D19__GPIO3_IO19 	0x1b0b0
+				MX6QDL_PAD_EIM_D20__GPIO3_IO20 	0x1b0b0
+			>;
+		};
+
+		pinctrl_ecspi1: ecspi1grp {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D17__ECSPI1_MISO 0x100b1
+				MX6QDL_PAD_EIM_D18__ECSPI1_MOSI 0x100b1
+				MX6QDL_PAD_EIM_D16__ECSPI1_SCLK 0x100b1
+			>;
+		};
+		
+		pinctrl_i2c1: i2c1grp {
+			fsl,pins = <
+				MX6QDL_PAD_CSI0_DAT8__I2C1_SDA	0x4001b8b1
+				MX6QDL_PAD_CSI0_DAT9__I2C1_SCL	0x4001b8b1
+			>;
+		};
+
+		pinctrl_i2c2: i2c2grp {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_COL3__I2C2_SCL	0x4001b8b1
+				MX6QDL_PAD_KEY_ROW3__I2C2_SDA	0x4001b8b1
+			 >;
+		};
+
+		pinctrl_i2c3: i2c3grp {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_3__I2C3_SCL	0x4001b8b1
+				MX6QDL_PAD_GPIO_6__I2C3_SDA	0x4001b8b1
+			>;
+		};
+
+		pinctrl_uart1: uart1grp {
+			fsl,pins = <
+				MX6QDL_PAD_CSI0_DAT10__UART1_TX_DATA	0x1b0b1
+				MX6QDL_PAD_CSI0_DAT11__UART1_RX_DATA	0x1b0b1
+			>;
+		};
+
+		pinctrl_uart4: uart4grp {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_COL0__UART4_TX_DATA	0x1b0b1		
+				MX6QDL_PAD_KEY_COL0__UART4_RX_DATA	0x1b0b1		
+			>;
+			
+        };  
+		
+		pinctrl_usbotg: usbotggrp {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x17059
+/*		
+				MX6QDL_PAD_KEY_ROW4__GPIO4_IO15		0x17059
+*/		
+			>;
+		};
+		
+		pinctrl_usdhc2: usdhc2grp {
+			fsl,pins = <			
+				MX6QDL_PAD_SD2_CMD__SD2_CMD		0x17059		
+				MX6QDL_PAD_SD2_CLK__SD2_CLK		0x10059		
+				MX6QDL_PAD_SD2_DAT0__SD2_DATA0		0x17059		
+				MX6QDL_PAD_SD2_DAT1__SD2_DATA1		0x17059		
+				MX6QDL_PAD_SD2_DAT2__SD2_DATA2		0x17059		
+				MX6QDL_PAD_SD2_DAT3__SD2_DATA3		0x17059		
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x80000000 	
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x80000000 	
+			>;
+        };
+    
+ 		pinctrl_usdhc3: usdhc3grp {
+			fsl,pins = <
+				MX6QDL_PAD_SD3_CMD__SD3_CMD		0x17059
+				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x10059
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0		0x17059
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1		0x17059
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x17059
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3		0x17059
+				MX6QDL_PAD_SD3_DAT4__SD3_DATA4		0x17059
+				MX6QDL_PAD_SD3_DAT5__SD3_DATA5		0x17059
+				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17059
+				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17059
+			>;
+        };
+		
+		pinctrl_wdog: wdoggrp {
+			fsl,pins = <
+				MX6QDL_PAD_SD1_DAT3__WDOG2_B 0x80000000
+			>;
+		};
+				
+		pinctrl_pwm1: pwm1grp {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_9__PWM1_OUT	0x1b0b1
+			 >;
+		};
+
+		pinctrl_pwm3: pwm3grp {
+			fsl,pins = <
+				MX6QDL_PAD_SD1_DAT1__PWM3_OUT	0x1b0b1
+			 >;
+        };
+        
+		pinctrl_hdmi_cec: hdmicecgrp {
+			fsl,pins = <
+				MX6QDL_PAD_KEY_ROW2__HDMI_TX_CEC_LINE 0x108b0
+			>;
+		};
+		
+	};
+};
+
+
