--- a/board/grinn/liteboard/imx6ul-liteboard-01.dts
+++ b/board/grinn/liteboard/imx6ul-liteboard-01.dts
@@ -43,15 +43,18 @@
 
 /dts-v1/;
 
-#include "imx6ul-litesom.dtsi"
+#include "imx6ul.dtsi"
 
 / {
 	model = "Grinn i.MX6UL liteBoard";
-	compatible = "grinn,imx6ul-liteboard", "grinn,imx6ul-litesom",
-		     "fsl,imx6ul";
+	compatible = "grinn,imx6ul-liteboard", "grinn,imx6ul-litesom", "fsl,imx6ul";
 
 	chosen {
 		stdout-path = &uart1;
+	};
+	
+	memory@80000000 {
+		reg = <0x80000000 0x20000000>;
 	};
 
 	reg_usb_otg1_vbus: regulator-usb-otg1-vbus {
@@ -146,7 +149,23 @@
 			MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x17059
 		>;
 	};
-
+	
+	pinctrl_usdhc2: usdhc2grp {
+		fsl,pins = <
+			MX6UL_PAD_NAND_RE_B__USDHC2_CLK	    0x10069
+			MX6UL_PAD_NAND_WE_B__USDHC2_CMD	    0x17059
+			MX6UL_PAD_NAND_DATA00__USDHC2_DATA0 0x17059
+			MX6UL_PAD_NAND_DATA01__USDHC2_DATA1 0x17059
+			MX6UL_PAD_NAND_DATA02__USDHC2_DATA2 0x17059
+			MX6UL_PAD_NAND_DATA03__USDHC2_DATA3 0x17059
+			MX6UL_PAD_NAND_DATA04__USDHC2_DATA4 0x17059
+			MX6UL_PAD_NAND_DATA05__USDHC2_DATA5 0x17059
+			MX6UL_PAD_NAND_DATA06__USDHC2_DATA6 0x17059
+			MX6UL_PAD_NAND_DATA07__USDHC2_DATA7 0x17059
+			MX6UL_PAD_NAND_ALE__USDHC2_RESET_B  0x17059
+		>;
+	};
+	
 	pinctrl_usb_otg1_vbus: usb-otg1-vbus {
 		fsl,pins = <
 			MX6UL_PAD_ENET2_RX_DATA0__GPIO2_IO08	0x79
@@ -213,6 +232,17 @@
 	no-1-8-v;
 	keep-power-in-suspend;
 	wakeup-source;
+	status = "okay";
+};
+
+&usdhc2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usdhc2>;
+	no-1-8-v;
+	non-removable;
+	keep-power-in-suspend;
+	wakeup-source;
+	bus-width = <8>;
 	status = "okay";
 };
 
