--- a/configs/grinn_liteboard_defconfig
+++ b/configs/grinn_liteboard_defconfig
@@ -21,6 +21,14 @@ BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
 BR2_PACKAGE_QT5SERIALBUS=y
 BR2_PACKAGE_QJSON=y
+BR2_PACKAGE_PICOCOM=y
+BR2_PACKAGE_PHP=y
+BR2_PACKAGE_PHP_SAPI_CGI=y
+BR2_PACKAGE_PHP_SAPI_FPM=y
+BR2_PACKAGE_PHP_EXT_DBA=y
+BR2_PACKAGE_PHP_EXT_SQLITE=y
+BR2_PACKAGE_PHP_EXT_PDO=y
+BR2_PACKAGE_PHP_EXT_PDO_SQLITE=y
 BR2_PACKAGE_LIBSSH=y
 BR2_PACKAGE_OPENSSL_BIN=y
 #BR2_PACKAGE_SQLITE=y
@@ -29,6 +37,15 @@ BR2_PACKAGE_GD=y
 BR2_PACKAGE_LIBPNG=y
 BR2_PACKAGE_LIBPCAP=y
 BR2_PACKAGE_ETHTOOL=y
+BR2_PACKAGE_LIGHTTPD=y
+BR2_PACKAGE_LIGHTTPD_OPENSSL=y
+BR2_PACKAGE_LIGHTTPD_ZLIB=y
+BR2_PACKAGE_LIGHTTPD_BZIP2=y
+BR2_PACKAGE_LIGHTTPD_PCRE=y
+BR2_PACKAGE_LIGHTTPD_WEBDAV=y
+BR2_PACKAGE_NGINX=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_SSHPASS=y
