--- a/configs/grinn_liteboard_defconfig
+++ b/configs/grinn_liteboard_defconfig
@@ -14,9 +14,7 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4.9"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/grinn/liteboard/linux.defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_USE_CUSTOM_DTS=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_WISYSTEM_EXT_PATH)/board/grinn/liteboard/imx6ul-liteboard-01.dts"
-BR2_PACKAGE_PICOCOM=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
 BR2_PACKAGE_QT5SERIALBUS=y
@@ -25,16 +23,27 @@ BR2_PACKAGE_PICOCOM=y
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_SAPI_CGI=y
 BR2_PACKAGE_PHP_SAPI_FPM=y
+BR2_PACKAGE_PHP_EXT_CALENDAR=y
+BR2_PACKAGE_PHP_EXT_FILEINFO=y
+BR2_PACKAGE_PHP_EXT_READLINE=y
+BR2_PACKAGE_PHP_EXT_ZIP=y
+BR2_PACKAGE_PHP_EXT_HASH=y
 BR2_PACKAGE_PHP_EXT_DBA=y
 BR2_PACKAGE_PHP_EXT_SQLITE=y
 BR2_PACKAGE_PHP_EXT_PDO=y
 BR2_PACKAGE_PHP_EXT_PDO_SQLITE=y
+BR2_PACKAGE_PHP_EXT_JSON=y
+BR2_PACKAGE_PHP_EXT_CURL=y
+BR2_PACKAGE_PHP_EXT_FTP=y
+BR2_PACKAGE_PHP_EXT_CTYPE=y
+BR2_PACKAGE_PHP_EXT_XML=y
+BR2_PACKAGE_PHP_EXT_XMLREADER=y
+BR2_PACKAGE_PHP_EXT_XMLWRITER=y
 BR2_PACKAGE_LIBSSH=y
-BR2_PACKAGE_OPENSSL_BIN=y
-#BR2_PACKAGE_SQLITE=y
-BR2_PACKAGE_LIBMODBUS=y
 BR2_PACKAGE_GD=y
 BR2_PACKAGE_LIBPNG=y
+BR2_PACKAGE_LIBXSLT=y
+BR2_PACKAGE_LIBMODBUS=y
 BR2_PACKAGE_LIBPCAP=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_LIGHTTPD=y
@@ -43,7 +52,6 @@ BR2_PACKAGE_LIGHTTPD_ZLIB=y
 BR2_PACKAGE_LIGHTTPD_BZIP2=y
 BR2_PACKAGE_LIGHTTPD_PCRE=y
 BR2_PACKAGE_LIGHTTPD_WEBDAV=y
-BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_OPENSSH=y
@@ -54,6 +62,7 @@ BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
